--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy"
 	  content="default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'">
-    <title>Daily Chores v0.0.0-1</title>
+    <title>{{APPNAME}} v0.0.0-1</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="ext/bootstrap/5.1.3/css/bootstrap.min.css" />
