Change h1 and h2 styles in generated app.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,13 +17,12 @@
     <link rel="stylesheet" type="text/css" href="view/styles.css">
   </head>
   <body>
-    <h1>Today's chores</h1>
+    <h1>{{APPNAME}}</h1>
 
     <button id="btn-preferences" title="Open preferences dialog">
       <i class="fa fa-cog fa-1x" aria-hidden="true"></i>
     </button>
 
-    <h1>Chores</h1>
     <h2>{Today's date}</h2>
 
     <table>
