Remove chores-related text from generated app

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -54,7 +54,7 @@
 	    <button id="reset-to-system">Reset to System Theme</button>
             <p>Modal body text goes here.</p>
 
-	    <h2>Chores Template</h2>
+	    <h2>Second dialog header</h2>
 	    <div class="container">
 	      <div class="row">
 		<div class="col-sm">
