--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,72 +18,74 @@
   </head>
   <body>
     <main>
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-      <span class="fs-4">{{APPNAME}}</span>
-    </a>
-    <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-          Home
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-          Dashboard
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-          Orders
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-          Products
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link text-white">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-          Customers
-        </a>
-      </li>
-    </ul>
-    <hr>
-  </div>
-
-    <div class="b-example-divider"></div>
+    <div class="d-flex flex-row">
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 280px;">
+	<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+	  <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+	  <span class="fs-4">{{APPNAME}}</span>
+	</a>
+	<hr>
+	<ul class="nav nav-pills flex-column mb-auto">
+	  <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
+              Home
+            </a>
+	  </li>
+	  <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+              Dashboard
+            </a>
+	  </li>
+	  <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+              Orders
+            </a>
+	  </li>
+	  <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+              Products
+            </a>
+	  </li>
+	  <li>
+            <a href="#" class="nav-link text-white">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+              Customers
+            </a>
+	  </li>
+	</ul>
+	<hr>
+      </div>
+      
+    <!-- <div class="b-example-divider"></div> -->
     
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-light" style="width: 280px;">
-    <h2>App content</h2>
-
-    <div class="modal show fade in" tabindex="-1" role="dialog" id="myModal">
-      <div class="modal-dialog modal-xl" role="document">
-	<div class="modal-content">
-	  <div class="modal-header">
-            <h5 class="modal-title">Preferences</h5>
-            <button type="button" class="close" data-dismiss="modal"
-		    aria-label="Close"">
-              <span aria-hidden="true">&times;</span>
-            </button>
-	  </div>
-	  <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close"
-		    data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-	  </div>
-</div>
-</div>
-</div>
-</div>
-<script src="src/renderer.js"></script>
-</main>
+      <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-light" style="width: 280px;">
+	<h2>App content</h2>
+	
+	<div class="modal show fade in" tabindex="-1" role="dialog" id="myModal">
+	  <div class="modal-dialog modal-xl" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+		<h5 class="modal-title">Preferences</h5>
+		<button type="button" class="close" data-dismiss="modal"
+			aria-label="Close">
+		  <span aria-hidden="true">&times;</span>
+		</button>
+	      </div>
+	      <div class="modal-footer">
+		<button type="button" class="btn btn-secondary close"
+			data-dismiss="modal">Close</button>
+		<button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
+      </div>
+    </div>
+    </div>
+    </div> <!-- d-flex flex-row" -->
+    </main>
+    <script src="src/renderer.js"></script>
   </body>
 </html>
